# yafowil-example-helloworld

./: .gitignore  README.md  buildout.cfg  helloworld.txt  pyproject.toml  setup.py
src/helloworld/: run.py
