[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helloworld"
version = "0.0.0"
description = ""
dependencies = [
    "yafowil.webob",
]

[project.entry-points."console_scripts"]
helloworld = "helloworld.run:run"


[tool.hatch.build.targets.wheel]
packages = ["src/helloworld"]
[tool.zest-releaser]
create-wheel = true
