[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helloworld"
version = "0.0.0"
description = ""
dependencies = [
    "yafowil.webob>1.99",
]

[project.scripts]
helloworld = "helloworld.run:run"


[tool.hatch.build.targets.wheel]
packages = ["src/helloworld"]
[tool.zest-releaser]
create-wheel = true
